--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,13 +22,12 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v2
       with:
-        python-version: "3.10"
+        python-version: "3.12"
         cache: "pip"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install requests
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r backend/requirements.txt; fi
     - name: Run the code
       run: |
-        python test.py
+        python backend/trafficData/getAirData.py
