--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r backend/requirements.txt; fi
+        pip install -r backend/requirements.txt
     - name: Run the code
       run: |
         python backend/trafficData/getAirData.py
