--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
-  
+
 permissions:
   contents: read
 
@@ -30,5 +30,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r backend/trafficData/requirements.txt
     - name: Run the code
+      env:
+          AIR_API_KEY: ${{ secrets.AIR_API_KEY }}
+          MONGO_USER_NAME: ${{ secrets.MONGO_USER_NAME }}
+          MONGO_PASSWORD: ${{secrets.MONGO_PASSWORD}}
       run: |
         python backend/trafficData/getAirData.py
