--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: Python application
 
 on:
@@ -20,8 +17,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v2
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v4
       with:
         python-version: "3.12"
         cache: "pip"
@@ -29,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r backend/trafficData/requirements.txt
-    - name: Run the code
+    - name: Run the code for air data
       env:
           AIR_API_KEY: ${{ secrets.AIR_API_KEY }}
           MONGO_USER_NAME: ${{ secrets.MONGO_USER_NAME }}
